k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatverse-app
  namespace: chatverse
spec:
  selector:
    app: chatverse-app
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
